  * Fixed dock badge text becoming too large. (#13088)
  * Removed flashing of the contact name. (#14452)

 Encryption
  * Made it easier to delete a fingerprint. (Aleksei Gorny) (#1654)
  * The "Generate" button is now labelled "Regenerate" when a fingerprint already exists. (Tyler Funnell) (#1128)

 Events and Notifications
  * Added the ability to add timestamps to Growl notifications. (Stuart Connolly) (#9920)
  * Added a "Do Nothing" event. (#3590).
  * Added a "Message sent (Group chat)" event. (Will Bowling) (#12316)
  * Added "Message received (Away)" and "Message received (Away Group Chat)" events. (Joshua Stein) (#13278)
  * Added Regex support for mentions. (#12832)

 Get Info window
  * Various visual refinements. (Paul Wilde) (#14441)
  * Removed the service icon from the top of the "Get Info" window's first pane (and from the contact list tooltip). (#14654)
  
 Group Chats
  * Added support for purple images (custom emoticons etc.). (Peter Fung) (#15183)

 Chat Window
  * Rounded user icon in the chat window toolbar. (#3757)

 Messaging
  * Added a "Reopen Closed Tab" menu item to the File menu that will restore the most recently closed tab. (#12537)
  * Clicking on a link whilst holding the Cmd key opens the link in the background. (Aaron Dodson) (#12129)
  * Added Imgur as a supported image uploading service. (Shayne Sweeney) (#13186)
  * Removed kl.am as a supported url shortener service. (Shawn Khan) (#14412)
  * Fixed link insertion for NetNewsWire. (#11389)
  * Added Google Chrome support for link insertion.

 Message Styles
  * Smooth Operator replaced Stockholm as the default message style
  * Added the "lastFocus" class for message styles to the latest message received while the chat didn't have focus, and "regainedFocus" for the first message received while the chat has regained focus after having previously lost it.

 Status
 * Added ability to change which track information the "iTunes" status displays. (#6373)
 
 Transcript Viewer